--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="TODO" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <title>Vite + React + TS</title>
   </head>
   <body>
